--- a/package/openvpn/server.conf
+++ b/package/openvpn/server.conf
@@ -3,7 +3,7 @@ proto udp
 dev tun
 ca ca.crt
 cert vpnserver.crt
-key server.key  # This file should be kept secret
+key vpnserver.key  # This file should be kept secret
 dh dh.pem
 server 192.168.123.0 255.255.255.0
 push "redirect-gateway def1 bypass-dhcp"
