--- a/package/openvpn/server.conf
+++ b/package/openvpn/server.conf
@@ -6,9 +6,9 @@ cert vpnserver.crt
 key vpnserver.key  # This file should be kept secret
 dh dh.pem
 server 192.168.123.0 255.255.255.0
-push "redirect-gateway def1 bypass-dhcp"
-push "dhcp-option DNS 208.67.222.222"
-push "dhcp-option DNS 208.67.220.220"
+push "redirect-gateway def1"
+push "dhcp-option DNS 8.8.8.8"
+push "dhcp-option DNS 8.8.4.4"
 keepalive 10 120
 tls-auth ta.key 0 # This file is secret
 cipher AES-256-CBC
