--- a/package/openvpn/server.conf
+++ b/package/openvpn/server.conf
@@ -3,14 +3,16 @@ proto udp
 dev tun
 ca ca.crt
 cert vpnserver.crt
-key vpnserver.key  # This file should be kept secret
+key vpnserver.key
 dh dh.pem
+client-to-client
 server 192.168.123.0 255.255.255.0
+client-config-dir ccd
 push "redirect-gateway def1"
 push "dhcp-option DNS 8.8.8.8"
 push "dhcp-option DNS 8.8.4.4"
 keepalive 10 120
-tls-auth ta.key 0 # This file is secret
+tls-auth ta.key 0
 cipher AES-256-CBC
 user nobody
 group nogroup
