--- a/package/openvpn/v2/server_file_udp.conf
+++ b/package/openvpn/v2/server_file_udp.conf
@@ -4,6 +4,7 @@ dev tun
 ca ca.crt
 cert vpnserver.crt
 key vpnserver.key
+dh dh.pem
 server 192.168.123.0 255.255.255.0
 client-config-dir ccd
 push "redirect-gateway def1"
