--- a/firewall/nftables/nftables.conf
+++ b/firewall/nftables/nftables.conf
@@ -1,3 +1,45 @@
 #!/usr/sbin/nft -f
+##################
+####################################################################################################################
+# Note: Since Debian 11 (Bullseye) was released in Aug 2021, the time has come to move from _iptables_ to _nftables_
+####################################################################################################################
+#####################################################################
+# Source: Adapted from https://wiki.gentoo.org/wiki/Nftables/Examples
+# Author: Jan Stepanek
+# Version: 2021-08-22 (date)
+############################
+#############################
+# Basic commands to remember:
+# nano /etc/nftables.conf – where to original file with rules is
+# nft -f /etc/nftables.conf – command to apply the rules
+# nft list ruleset 
 
+
+# Delete all rules
 flush ruleset
+
+# Using _inet_ = IPv4 and IPv6
+table inet filter {
+	chain input {
+		type filter hook input priority 0; policy drop;
+		ct state invalid counter drop comment "early drop of invalid packets"
+		ct state {established, related} counter accept comment "accept all connections related to connections made by us"
+		iif lo accept comment "accept loopback"
+		iif != lo ip daddr 127.0.0.1/8 counter drop comment "drop connections to loopback not coming from loopback"
+		iif != lo ip6 daddr ::1/128 counter drop comment "drop connections to loopback not coming from loopback"
+		ip protocol icmp counter accept comment "accept all ICMP types"
+		ip6 nexthdr icmpv6 counter accept comment "accept all ICMP types"
+		tcp dport 22 counter accept comment "accept SSH"
+		counter comment "count dropped packets"
+	}
+
+	chain forward {
+		type filter hook forward priority 0; policy drop;
+		counter comment "count dropped packets"
+	}
+
+	chain output {
+		type filter hook output priority 0; policy accept;
+		counter comment "count accepted packets"
+	}
+}
