--- a/firewall/nftables/nftables.conf
+++ b/firewall/nftables/nftables.conf
@@ -6,14 +6,13 @@
 #####################################################################
 # Source: Adapted from https://wiki.gentoo.org/wiki/Nftables/Examples
 # Author: Jan Stepanek
-# Version: 2021-08-22 (date)
+# Version: 2021-08-29 (date)
 ############################
 #############################
 # Basic commands to remember:
 # nano /etc/nftables.conf – where to original file with rules is
 # nft -f /etc/nftables.conf – command to apply the rules
 # nft list ruleset 
-
 
 # Delete all rules
 flush ruleset
@@ -30,6 +29,8 @@ table inet filter {
 		ip protocol icmp counter accept comment "accept all ICMP types"
 		ip6 nexthdr icmpv6 counter accept comment "accept all ICMP types"
 		tcp dport 22 counter accept comment "accept SSH"
+		tcp dport 80 counter accept comment "accept HTTP"
+		tcp dport 443 counter accept comment "accept HTTPS"
 		counter comment "count dropped packets"
 	}
 
